--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,24 @@
 [build]
-  publish = ".next"
   command = "npm run build"
+  publish = ".next"
 
+[build.environment]
+  NODE_ENV = "production"
+  NEXT_TELEMETRY_DISABLED = "1"
+  CI = "true"
+  NPM_FLAGS = "--prefix=/opt/buildhome/repo"
+
+# Redirect all routes to index.html for SPA behavior
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-[build.environment]
-  NODE_ENV = "production"
+# Headers for better performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
