--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "portfolio",
+  "name": "portofolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,41 +12,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12",
-    "@sentry/nextjs": "^7.105.0",
-    "@tabler/icons-react": "^3.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.0.25",
-    "lucide-react": "^0.365.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "next": "14.1.4",
-    "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-lottie": "^1.2.4",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.0",
-    "three-globe": "^2.31.0"
+    "@react-three/drei": "9.88.13",
+    "@react-three/fiber": "8.15.11",
+    "@sentry/nextjs": "7.105.0",
+    "clsx": "2.1.1",
+    "framer-motion": "10.16.16",
+    "mini-svg-data-uri": "1.4.4",
+    "next": "14.2.5",
+    "next-themes": "0.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.0.1",
+    "react-lottie": "1.2.3",
+    "tailwind-merge": "2.3.0",
+    "tailwindcss-animate": "1.0.7",
+    "three": "0.158.0",
+    "three-globe": "2.27.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/react-lottie": "^1.2.10",
-    "@types/three": "^0.160.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.0"
-  },
-  "engines": {
-    "node": ">=18.17.0",
-    "npm": ">=9.0.0"
+    "@types/node": "20.14.10",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
+    "@types/react-lottie": "1.2.10",
+    "@types/three": "0.158.3",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.39",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.5.3"
   }
 }
