--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "types/**/*.ts"
-  ],
+, "app/global-error.jsx"  ],
   "exclude": ["node_modules"]
 }
